# transport-coordinator

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  memory.md  pyproject.toml
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_stop_status.py
apps/api/src/transport_api/: __init__.py  config.py  main.py
apps/api/src/transport_api/db/: __init__.py  models.py  session.py
apps/api/src/transport_api/services/: calendar.py  diff.py  manifest.py  matrix_cache.py  persistence.py
apps/api/tests/: test_ai_parse.py  test_calendar.py  test_diff.py  test_geocode_batch.py  test_health.py  test_manifest.py  test_matrix_cache.py
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/public/: manifest.webmanifest
apps/web/src/: App.css  App.tsx  CoordinatorView.tsx  DriverView.css  DriverView.tsx  index.css  types.ts
apps/web/src/components/: Icons.tsx  MapFitBounds.tsx  RoleSwitch.tsx  RouteMap.tsx
apps/web/src/utils/: production.ts  time.ts
docker/: Dockerfile.api  compose.ai.yml  compose.dev.yml  compose.yml
docs/: dela-appen.md  demo-manual-sv.md  design.md  on-prem-install.md
scripts/: Start Transport Coordinator.command  Stop Transport Coordinator.command  dev-no-docker.sh  dev-setup.sh  install-desktop-shortcut.sh  install.sh  start-api.sh  start-web.sh  start.sh  stop.sh
