[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transport-api"
version = "0.1.0"
description = "FastAPI backend for transport coordination"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "geoalchemy2>=0.15",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "fpdf2>=2.8",
    "transport-solver",
    "transport-geospatial",
    "transport-ai",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28",
    "pytest>=8.0",
    "ruff>=0.8",
    "fakeredis>=2.26",
]

[tool.hatch.build.targets.wheel]
packages = ["src/transport_api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
